Fix scrollbar

--- a/src/components/PunkList.css
+++ b/src/components/PunkList.css
@@ -4,10 +4,9 @@
   overflow-y: scroll;
   margin-top: 20px;
   padding-bottom: 20px;
-  /* border-bottom: 1px solid #fff; */
-  justify-content: center;
+  border-bottom: 1px solid #fff;
 }
 
-.punkList::-webkit-scrollbar:horizontal {
+.punkList::-webkit-scrollbar {
   display: none;
 }
